ftp: Implement backups for replace

https://bugzilla.gnome.org/show_bug.cgi?id=621917